apps/restreamer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restreamer
  namespace: restreamer
  labels:
    app: restreamer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restreamer
  template:
    metadata:
      labels:
        app: restreamer
    spec:
      containers:
      - name: restreamer
        image: docker.io/datarhei/restreamer:latest
        resources:
          limits:
            cpu: 1
            memory: 512M
          requests:
            cpu: 250m
            memory: 512M
        ports:
        - containerPort: 8080
          name: web
        - containerPort: 1935
          name: rtmp
        - containerPort: 1936
          name: rtmps
        volumeMounts:
          - name: config
            mountPath: "/core/config"
            readOnly: false
          - name: data
            mountPath: "/core/data"
            readOnly: false
        
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: restreamer-config
        - name: data
          persistentVolumeClaim:
            claimName: restreamer-data
