apps/restreamer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restreamer
  namespace: restreamer
  annotations:
    external-dns.alpha.kubernetes.io/hostname: in.restreamer.chaosdorf.space.
spec:
  type: LoadBalancer
  selector:
    app: restreamer
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: web
    - name: rtmp
      protocol: TCP
      port: 1935
      targetPort: rtmp
    - name: rtmps
      protocol: TCP
      port: 1936
      targetPort: rtmps
